Add WMLES test cases

--- a/TestCases/incomp_wmles/channel/wmles_channel.cfg
+++ b/TestCases/incomp_wmles/channel/wmles_channel.cfg
@@ -1,11 +1,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Plane Channel Flow at Re_tau = 5200                         %
+% Case description: Plane Channel Flow at Re_tau = 5200 (Incompressible)       %
 % Author: Eduardo Molina                                                       %
 % Institution: Stanford University                                             %
-% Date: 2020.12.14                                                            %
-% File Version 7.0.8 "Blackbird"                                                  %
+% Date: 2020.12.14                                                             %
+% File Version 7.0.8 "Blackbird"                                               %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -15,7 +15,7 @@
 %                               FEM_EULER, FEM_NAVIER_STOKES, FEM_RANS, FEM_LES,
 %                               WAVE_EQUATION, HEAT_EQUATION, FEM_ELASTICITY,
 %                               POISSON_EQUATION)
-SOLVER= NAVIER_STOKES
+SOLVER= INC_NAVIER_STOKES
 % KIND_VERIFICATION_SOLUTION= TURBULENT_CHANNEL
 %
 % If Navier-Stokes, kind of turbulent model (NONE, SA)
@@ -28,23 +28,33 @@ MATH_PROBLEM= DIRECT
 % Restart solution (NO, YES)
 RESTART_SOL= YES
 %
-% -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
-% Mach number (non-dimensional, based on the free-stream values)
-MACH_NUMBER= 0.20
+% ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 %
-% Free-stream pressure (101325.0 N/m^2, 2116.216 psf by default)
-% FREESTREAM_PRESSURE= 2750.30531789
+% Density model within the incompressible flow solver.
+% Options are CONSTANT (default), BOUSSINESQ, or VARIABLE. If VARIABLE,
+% an appropriate fluid model must be selected.
+INC_DENSITY_MODEL= CONSTANT
 %
-% Free-stream temperature (288.15 K, 518.67 R by default)
-FREESTREAM_TEMPERATURE= 300.0
+% Solve the energy equation in the incompressible flow solver
+INC_ENERGY_EQUATION = NO
 %
-% Reynolds number (non-dimensional, based on the free-stream values)
-REYNOLDS_NUMBER= 258489.067
+% Initial density for incompressible flows (1.2886 kg/m^3 by default)
+INC_DENSITY_INIT= 0.0319367
 %
-% Reynolds length (1 m, 1 inch by default)
-REYNOLDS_LENGTH= 2.0
-
+% Initial velocity for incompressible flows (1.0,0,0 m/s by default)
+INC_VELOCITY_INIT= ( 69.4448, 0.0, 0.0 )
+%
+% Initial temperature for incompressible flows that include the
+% energy equation (288.15 K by default). Value is ignored if
+% INC_ENERGY_EQUATION is false.
+INC_TEMPERATURE_INIT= 300.
+%
+% Non-dimensionalization scheme for incompressible flows. Options are
+% INITIAL_VALUES (default), REFERENCE_VALUES, or DIMENSIONAL.
+% INC_*_REF values are ignored unless REFERENCE_VALUES is chosen.
+% INC_NONDIM= DIMENSIONAL
+%
 % ---------------------- REFERENCE VALUE DEFINITION ---------------------------%
 %
 % Reference origin for moment computation
@@ -57,10 +67,6 @@ REF_LENGTH= 1.0
 %
 % Reference area for force coefficients (0 implies automatic calculation)
 REF_AREA= 1.0
-
-% Flow non-dimensionalization (DIMENSIONAL, FREESTREAM_PRESS_EQ_ONE,
-%                              FREESTREAM_VEL_EQ_MACH, FREESTREAM_VEL_EQ_ONE)
-REF_DIMENSIONALIZATION= FREESTREAM_PRESS_EQ_ONE
 
 % ---- IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
 %
@@ -103,8 +109,8 @@ BODY_FORCE_VECTOR = ( 0.261798, 0.0, 0.0 )
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
 % Navier-Stokes (no-slip), isothermal wall marker(s) (NONE = no marker)
-% MARKER_HEATFLUX= ( lower, 0.0, upper, 0.0 )
-MARKER_ISOTHERMAL= ( lower, 273.15, upper, 273.15 )
+MARKER_HEATFLUX= ( lower, 0.0, upper, 0.0 )
+% MARKER_ISOTHERMAL= ( lower, 273.15, upper, 273.15 )
 %
 %
 % Periodic boundary marker(s) (NONE = no marker)
@@ -141,11 +147,11 @@ UNST_CFL_NUMBER= 0.0
 MAX_TIME= 99
 
 % Number of internal iterations (dual time methodUNST_INT_ITER= 5
-INNER_ITER= 10
+INNER_ITER= 5
 
 % Iteration number to begin unsteady restarts
 RESTART_ITER= 2
-TIME_ITER= 11
+TIME_ITER= 52
 
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
@@ -191,6 +197,7 @@ VENKAT_LIMITER_COEFF= 0.3
 %
 % Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, HLLC,
 %                              TURKEL_PREC, MSW)
+% CONV_NUM_METHOD_FLOW= FDS
 CONV_NUM_METHOD_FLOW= JST
 JST_SENSOR_COEFF= ( 0.0, 0.0 )
 %
@@ -252,12 +259,12 @@ RESTART_FILENAME= restart_flow.dat
 % Output file flow (w/o extension) variables
 VOLUME_FILENAME= flow
 %
-% Writing solution file frequency for physical time steps (dual time
 OUTPUT_WRT_FREQ = 2000
-
+%
 % SCREEN_OUTPUT= (TIME_ITER, INNER_ITER, RMS_DENSITY, RMS_ENERGY, AVG_MACH, AVG_CFL, REL_RMS_DENSITY)
 % SCREEN_OUTPUT= (INNER_ITER, WALL_TIME, RMS_DENSITY, RMS_ENERGY, AVG_MASSFLOW, AVG_CFL, REL_RMS_DENSITY)
-VOLUME_OUTPUT = (PRIMITIVE, WALL_FUNCTION )
+SCREEN_OUTPUT= (TIME_ITER, INNER_ITER, RMS_PRESSURE, RMS_VELOCITY-X, AVG_CFL)
+VOLUME_OUTPUT = (PRIMITIVE, WALL_FUNCTION, MESH_QUALITY )
 % VOLUME_OUTPUT = (PRIMITIVE, TIME_AVERAGE, VORTEX_IDENTIFICATION)
 %
 HISTORY_OUTPUT= (ITER, FLOW_COEFF, RMS_RES, CFL_NUMBER, REL_RMS_RES)
