Update/clean streamwise periodic regression tests.

--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_3d/configFluid.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_3d/configFluid.cfg
@@ -13,34 +13,24 @@
 %
 SOLVER= INC_RANS
 KIND_TURB_MODEL= SST
-RESTART_SOL= NO
-READ_BINARY_RESTART= YES
-%
-HISTORY_OUTPUT= ( ITER, RMS_RES, STREAMWISE_PERIODIC, FLOW_COEFF )
 %
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 %
 INC_DENSITY_MODEL= CONSTANT
-INC_ENERGY_EQUATION = YES
-%
-% Serves as material parameter
 INC_DENSITY_INIT= 1045.0
 INC_VELOCITY_INIT= ( 0.1, 0.0, 0.0 )
+%
+INC_ENERGY_EQUATION = YES
 INC_TEMPERATURE_INIT= 338.0
-%
-%INC_NONDIM= INITIAL_VALUES
-INC_NONDIM= DIMENSIONAL
-%
-% ---- IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
-%
-% Redundant to INC_DENSITY_MODEL
-FLUID_MODEL= CONSTANT_DENSITY
 SPECIFIC_HEAT_CP= 3540.0
 %
-% --------------------------- VISCOSITY MODEL ---------------------------------%
+INC_NONDIM= DIMENSIONAL
 %
 VISCOSITY_MODEL= CONSTANT_VISCOSITY
 MU_CONSTANT= 0.001385
+%
+FREESTREAM_TURBULENCEINTENSITY= 0.05
+FREESTREAM_TURB2LAMVISCRATIO= 10.0
 %
 % --------------------------- THERMAL CONDUCTIVITY MODEL ----------------------%
 %
@@ -55,54 +45,34 @@ PRANDTL_TURB= 0.90
 %
 % --------------------- STREAMWISE PERIODICITY DEFINITION ---------------------%
 %
-% Specify type of streamwise periodicty (NONE, PRESSURE_DROP, MASSFLOW)
 KIND_STREAMWISE_PERIODIC= MASSFLOW
-%
-% Delta P value that drives the flow as a source term in the momentum equations.
-% Defaults to 1.0. Was set to 380 before
 STREAMWISE_PERIODIC_PRESSURE_DROP= 210
-%
-% Target massflow. Necessary pressure drop is determined iteratively. 
-% Initial value is given via STREAMWISE_PERIODIC_PRESSURE_DROP.
-% Use INC_OUTLET_DAMPING as a relaxation factor. Default value 0.1 is a good start.
 STREAMWISE_PERIODIC_MASSFLOW= 0.009675
-%
 INC_OUTLET_DAMPING= 0.001
-
+%
 STREAMWISE_PERIODIC_TEMPERATURE= NO
 STREAMWISE_PERIODIC_OUTLET_HEAT= -17.958584
-%STREAMWISE_PERIODIC_OUTLET_HEAT= -0.000001
+%
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
-%MARKER_HEATFLUX= ( fluid_top, 0.0 )
-MARKER_HEATFLUX= ( fluid_top, 0.0, fluid_bottom_interface, 0.0, fluid_pin1, 0.0, fluid_pin3, 0.0 )
-%
+MARKER_HEATFLUX= ( fluid_top, 0.0, \
+                   fluid_bottom_interface, 0.0, \
+                   fluid_pin1, 0.0, \
+                   fluid_pin3, 0.0 )
 MARKER_SYM= ( fluid_sym_sides )
-%
-% Periodic boundary marker(s) (NONE = no marker)
-% Format: ( periodic marker, donor marker, rotation_center_x, rotation_center_y,
-% rotation_center_z, rotation_angle_x-axis, rotation_angle_y-axis,
-% rotation_angle_z-axis, translation_x, translation_y, translation_z, ... )
 MARKER_PERIODIC= ( fluid_inlet, fluid_outlet, 0.0,0.0,0.0, 0.0,0.0,0.0, 0.0111544,0.0,0.0 )
 %
 % Alternative to periodic simulation
 %INC_INLET_TYPE= VELOCITY_INLET
 %MARKER_INLET= ( fluid_inlet, 338.0, 0.75, 1.0, 0.0, 0.0 )
-% Test vals to hinder outlet backflow
-%MARKER_INLET= ( fluid_inlet, 338.0, 0.3, 1.0, 0.0, 0.0 )
 %
 %INC_OUTLET_TYPE= PRESSURE_OUTLET
 %MARKER_OUTLET= ( fluid_outlet, 0.0 )
 %
-FREESTREAM_TURBULENCEINTENSITY= 0.05
-FREESTREAM_TURB2LAMVISCRATIO= 10.0
-%
 % ------------------------ SURFACES IDENTIFICATION ----------------------------%
 %
-MARKER_PLOTTING= ( fluid_bottom_interface, fluid_pin1, fluid_pin2, fluid_pin3 )
 MARKER_MONITORING= ( fluid_inlet, fluid_outlet )
 %
-% Massflow averaged total pressure difference between in- and outlet is the target
 MARKER_ANALYZE = ( fluid_outlet, fluid_inlet )
 MARKER_ANALYZE_AVERAGE = MASSFLUX
 %
@@ -119,33 +89,8 @@ LINEAR_SOLVER_PREC= ILU
 LINEAR_SOLVER_ERROR= 1E-15
 LINEAR_SOLVER_ITER= 15
 %
-% -------------------------- MULTIGRID PARAMETERS -----------------------------%
-%
-% Multi-grid levels (0 = no multi-grid)
-MGLEVEL= 0
-%
-% Multi-grid cycle (V_CYCLE, W_CYCLE, FULLMG_CYCLE)
-MGCYCLE= V_CYCLE
-%
-% Multi-grid pre-smoothing level
-MG_PRE_SMOOTH= ( 1, 2, 3, 3 )
-%
-% Multi-grid post-smoothing level
-MG_POST_SMOOTH= ( 0, 0, 0, 0 )
-%
-% Jacobi implicit smoothing of the correction
-MG_CORRECTION_SMOOTH= ( 0, 0, 0, 0 )
-%
-% Damping factor for the residual restriction
-MG_DAMP_RESTRICTION= 0.75
-%
-% Damping factor for the correction prolongation
-MG_DAMP_PROLONGATION= 0.75
-%
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
-%CONV_NUM_METHOD_FLOW= JST
-%JST_SENSOR_COEFF= ( 0.5, 0.05 )
 CONV_NUM_METHOD_FLOW= FDS
 MUSCL_FLOW= YES
 SLOPE_LIMITER_FLOW= NONE
@@ -161,30 +106,9 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
 CONV_CRITERIA= RESIDUAL
-%RESIDUAL_REDUCTION= 18
 CONV_RESIDUAL_MINVAL= -26
 CONV_STARTITER= 100000000
 %
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
-%MESH_FILENAME= /home/kat7rng/scratch/2__Streamwise-Periodic/5__UnitCell4Print/1__Mesh/1__Res1/UnitCellPins.su2
-MESH_FORMAT= SU2
-%
-SOLUTION_FILENAME= solution_flow
-RESTART_FILENAME= solution_flow
-%
-VOLUME_FILENAME= flow
-SURFACE_FILENAME= surface_flow
-WRT_CON_FREQ= 1
-WRT_RESIDUALS= YES
-WRT_LIMITERS= YES
-%
-CONV_FILENAME= history
-BREAKDOWN_FILENAME= forces_breakdown
-VALUE_OBJFUNC_FILENAME= of_eval
-GRAD_OBJFUNC_FILENAME= of_grad
-%
-SOLUTION_ADJ_FILENAME= solution_adj
-RESTART_ADJ_FILENAME= restart_adj
-VOLUME_ADJ_FILENAME= adjoint
-SURFACE_ADJ_FILENAME= surface_adjoint
+HISTORY_OUTPUT= ( ITER, RMS_RES, STREAMWISE_PERIODIC, FLOW_COEFF )
