--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_3d/configSolid.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_3d/configSolid.cfg
@@ -12,52 +12,40 @@
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 %
 SOLVER= HEAT_EQUATION
-RESTART_SOL= NO
-READ_BINARY_RESTART= YES
-%
-HISTORY_OUTPUT= (ITER, RMS_RES, HEAT)
 %
 % ---------------- (SOLIDS) CONDUCTION CONDITION DEFINITION -------------------%
 %
 INC_NONDIM= DIMENSIONAL
 SOLID_TEMPERATURE_INIT= 345.0
 SOLID_DENSITY= 2719
-%
-% ---- IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
-%
 SPECIFIC_HEAT_CP = 871.0
-%
-% --------------------------- THERMAL CONDUCTIVITY MODEL ----------------------%
-%
-CONDUCTIVITY_MODEL= CONSTANT_PRANDTL
-PRANDTL_LAM = 6.99091
-% In solver_direct_heat:224 the thermal diff lambda/(cp * rho) is set and later
-% used for the viscous res
 SOLID_THERMAL_CONDUCTIVITY= 200
 %
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
 MARKER_SYM= ( solid_sym_sides)
 %
-%MARKER_ISOTHERMAL= ( solid_bottom_heater, 300 )
+MARKER_HEATFLUX= ( solid_bottom_heater, 5e5, \
+                   solid_block_inlet, 0.0, \
+                   solid_block_outlet, 0.0, \
+                   solid_pin1_inlet, 0.0, \
+                   solid_pin3_outlet, 0.0, \
+                   solid_pins_top, 0.0, \
+                   solid_bottom_interface, 0.0, \
+                   solid_pin1, 0.0, \
+                   solid_pin3, 0.0 )
 %
 %MARKER_HEATFLUX= ( solid_bottom_heater, 5e5, solid_block_inlet, 0.0, solid_block_outlet, 0.0, solid_pin1_inlet, 0.0, solid_pin3_outlet, 0.0, solid_pins_top, 0.0 )
-MARKER_HEATFLUX= ( solid_bottom_heater, 5e5, solid_block_inlet, 0.0, solid_block_outlet, 0.0, solid_pin1_inlet, 0.0, solid_pin3_outlet, 0.0, solid_pins_top, 0.0, solid_bottom_interface, 0.0, solid_pin1, 0.0, solid_pin3, 0.0 )
+%MARKER_ISOTHERMAL= ( solid_bottom_heater, 300 )
 %
 % ------------------------ SURFACES IDENTIFICATION ----------------------------%
 %
-MARKER_PLOTTING = (solid_bottom_interface, solid_pin1, solid_pin2, solid_pin3, solid_pins_top)
 MARKER_MONITORING = ( solid_bottom_heater )
 %
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
 NUM_METHOD_GRAD= GREEN_GAUSS
-%
 CFL_NUMBER= 1000
-CFL_ADAPT= NO
-CFL_ADAPT_PARAM= ( 1.0, 0.8, 100.0, 100000.0 )
-BETA_FACTOR= 50
-MAX_DELTA_TIME= 1.0
 %
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
@@ -69,32 +57,14 @@ LINEAR_SOLVER_ITER= 15
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
 CONV_CRITERIA= RESIDUAL
-%RESIDUAL_REDUCTION= 10
 CONV_RESIDUAL_MINVAL= -20
 CONV_STARTITER= 10000000000
 %
 % -------------------- HEAT NUMERICAL METHOD DEFINITION -----------------------%
 %
 CONV_NUM_METHOD_HEAT = SPACE_CENTERED
-MUSCL_HEAT= YES
-JST_SENSOR_COEFF_HEAT= ( 0.5, 0.15 )
 TIME_DISCRE_HEAT= EULER_IMPLICIT
 %
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
-%MESH_FILENAME= /home/kat7rng/scratch/2__Streamwise-Periodic/5__UnitCell4Print/1__Mesh/1__Res1/UnitCellPins.su2
-MESH_FORMAT= SU2
-%
-SOLUTION_FILENAME= solution_heat
-RESTART_FILENAME= solution_heat
-%
-VOLUME_FILENAME= heat 
-SURFACE_FILENAME= surface_heat
-WRT_CON_FREQ= 1
-WRT_RESIDUALS= YES
-WRT_LIMITERS= YES
-%
-CONV_FILENAME= history
-BREAKDOWN_FILENAME= forces_breakdown
-VALUE_OBJFUNC_FILENAME= of_eval
-GRAD_OBJFUNC_FILENAME= of_grad
+HISTORY_OUTPUT= (ITER, RMS_RES, HEAT)
