--- a/TestCases/incomp_navierstokes/streamwise_periodic/pipeSlice_3d/sp_pipeSlice_3d_dp_hf_tp.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/pipeSlice_3d/sp_pipeSlice_3d_dp_hf_tp.cfg
@@ -1,227 +1,86 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Poiseuille flow case for testing a body force/periodicity  %
-% Author: Thomas D. Economon				                       %
-% Institution: Stanford University                                             %
-% Date: 2017.02.27                                                             %
-% File Version 6.1.0 "Falcon"                                                   %
+% Case description: Poiseuille flow for testing a body force/periodicity       %
+% Author: T. Kattmann				                               %
+% Institution: Robert Bosch GmbH                                               %
+% Date: 2020.12.14                                                             %
+% File Version 7.0.8 "Blackbird"                                               %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 %
-% Physical governing equations (EULER, NAVIER_STOKES,
-%                               WAVE_EQUATION, HEAT_EQUATION, FEM_ELASTICITY,
-%                               POISSON_EQUATION)
 SOLVER= INC_NAVIER_STOKES
 %
-% If Navier-Stokes, kind of turbulent model (NONE, SA)
 KIND_TURB_MODEL= NONE
 %
-% Mathematical problem (DIRECT, CONTINUOUS_ADJOINT)
-MATH_PROBLEM= DIRECT
-%
-% Restart solution (NO, YES)
-RESTART_SOL= NO
-%
-HISTORY_OUTPUT= (FLOW_COEFF, LINSOL)
-
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 %
-% Density model within the incompressible flow solver.
-% Options are CONSTANT (default), BOUSSINESQ, or VARIABLE. If VARIABLE,
-% an appropriate fluid model must be selected.
 INC_DENSITY_MODEL= CONSTANT
-%
-% Solve the energy equation in the incompressible flow solver
 INC_ENERGY_EQUATION = NO
-%
-% Initial density for incompressible flows
-% (1.2886 kg/m^3 by default (air), 998.2 Kg/m^3 (water))
 INC_DENSITY_INIT= 1.0
-%
-% Initial velocity for incompressible flows (1.0,0,0 m/s by default)
-INC_VELOCITY_INIT= ( 0.0, 0.0, 1.0 )
-%
-% Non-dimensionalization scheme for incompressible flows. Options are
-% INITIAL_VALUES (default), REFERENCE_VALUES, or DIMENSIONAL.
-% INC_*_REF values are ignored unless REFERENCE_VALUES is chosen.
-%INC_NONDIM= INITIAL_VALUES
+INC_VELOCITY_INIT= ( 0.0, 0.0, 0.3 )
 INC_NONDIM= DIMENSIONAL
-%
-% ---- IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
-%
-% Different gas model (STANDARD_AIR, IDEAL_GAS, VW_GAS, PR_GAS)
-FLUID_MODEL= CONSTANT_DENSITY
 %
 % --------------------------- VISCOSITY MODEL ---------------------------------%
 %
-% Viscosity model (SUTHERLAND, CONSTANT_VISCOSITY).
 VISCOSITY_MODEL= CONSTANT_VISCOSITY
-%
-% Molecular Viscosity that would be constant (1.716E-5 by default)
 MU_CONSTANT= 1.8e-5
 %
 % --------------------- STREAMWISE PERIODICITY DEFINITION ---------------------%
 %
-% Specify type of streamwise periodicty (NONE, PRESSURE_DROP, MASSFLOW)
-%KIND_STREAMWISE_PERIODIC= MASSFLOW
 KIND_STREAMWISE_PERIODIC= PRESSURE_DROP
-%
-% Delta P value that drives the flow as a source term in the momentum equations.
-% Defaults to 1.0.
 STREAMWISE_PERIODIC_PRESSURE_DROP= 0.001
 %
-% Target massflow. Necessary pressure drop is determined iteratively. 
-% Initial value is given via STREAMWISE_PERIODIC_PRESSURE_DROP.
-% Use INC_OUTLET_DAMPING as a relaxation factor.
-STREAMWISE_PERIODIC_MASSFLOW= 0.00270
-
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
-% Navier-Stokes (no-slip), constant heat flux wall  marker(s) (NONE = no marker)
-% Format: ( marker name, constant heat flux (J/m^2), ... )
 MARKER_HEATFLUX= (wall, 0.0)
-%
-% Symmetry boundary marker(s) (NONE = no marker)
-%MARKER_SYM= ( fluid_sym )
-%
-% Periodic boundary marker(s) (NONE = no marker)
-% Format: ( periodic marker, donor marker, rotation_center_x, rotation_center_y, 
-% rotation_center_z, rotation_angle_x-axis, rotation_angle_y-axis, 
-% rotation_angle_z-axis, translation_x, translation_y, translation_z, ... )
 MARKER_PERIODIC= ( inlet, outlet, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0005 )
 %
-% Marker(s) of the surface to be plotted or designed
 MARKER_PLOTTING= ( inlet )
-%
-% Marker(s) of the surface where the functional (Cd, Cl, etc.) will be evaluated
-MARKER_MONITORING= (wall)
-%
-% Marker(s) of the surface that is going to be analyzed in detail (massflow, average pressure, distortion, etc)
+MARKER_MONITORING= ( wall )
 MARKER_ANALYZE = ( oulet )
-%
-% Method to compute the average value in MARKER_ANALYZE (AREA, MASSFLUX).
 MARKER_ANALYZE_AVERAGE = AREA
-
-% Kind of adaptation (needed to create the initial periodic mesh)
-%KIND_ADAPT= PERIODIC
-
+%
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
-% Numerical method for spatial gradients (GREEN_GAUSS, WEIGHTED_LEAST_SQUARES)
 NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
-%
-% Courant-Friedrichs-Lewy condition of the finest grid
+%CFL_NUMBER= 1e10
 CFL_NUMBER= 50000
-%
-% Adaptive CFL number (NO, YES)
+%CFL_ADAPT= YES
 CFL_ADAPT= NO
+CFL_ADAPT_PARAM= ( 0.5, 10, 15.0, 1e30 )
+ITER= 15000
 %
-% Parameters of the adaptive CFL number (factor down, factor up, CFL min value,
-%                                        CFL max value )
-CFL_ADAPT_PARAM= ( 1.5, 0.5, 15.0, 10000.0 )
-%
-% Number of total iterations
-ITER= 20000
-
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
-% Linear solver for implicit formulations (BCGSTAB, FGMRES)
 LINEAR_SOLVER= FGMRES
-%
-% Preconditioner of the Krylov linear solver (JACOBI, LINELET, LU_SGS)
 LINEAR_SOLVER_PREC= ILU
-%
-% Minimum error of the linear solver for implicit formulations
 LINEAR_SOLVER_ERROR= 1E-15
+LINEAR_SOLVER_ITER= 10
 %
-% Max number of iterations of the linear solver for the implicit formulation
-LINEAR_SOLVER_ITER= 20
-
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
-% Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, HLLC,
-%                              TURKEL_PREC, MSW)
 CONV_NUM_METHOD_FLOW= FDS
-%
-% Monotonic Upwind Scheme for Conservation Laws (TVD) in the flow equations.
-%           Required for 2nd order upwind schemes (NO, YES)
 MUSCL_FLOW= YES
-%
-% Slope limiter (NONE, VENKATAKRISHNAN, VENKATAKRISHNAN_WANG,
-%                BARTH_JESPERSEN, VAN_ALBADA_EDGE)
-SLOPE_LIMITER_FLOW= VENKATAKRISHNAN
-%
-% Coefficient for the limiter (smooth regions)
-VENKAT_LIMITER_COEFF= 0.03
-%
-% 2nd and 4th order artificial dissipation coefficients
-JST_SENSOR_COEFF= ( 0.5, 0.04 )
-%
-% Time discretization (RUNGE-KUTTA_EXPLICIT, EULER_IMPLICIT, EULER_EXPLICIT)
+SLOPE_LIMITER_FLOW= NONE
 TIME_DISCRE_FLOW= EULER_IMPLICIT
-
+%
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
-% Convergence criteria (CAUCHY, RESIDUAL)
-%
 CONV_CRITERIA= RESIDUAL
-%
-% Min value of the residual (log10 of the residual)
 CONV_RESIDUAL_MINVAL= -24
-%
-% Start convergence criteria at iteration number
 CONV_STARTITER= 10
 %
 % ------------------------- INPUT/OUTPUT INFORMATION ----------------------.su2
 %
-% Mesh input file
 MESH_FILENAME= pipe1cell3D.su2
 %
-% Mesh input file format (SU2, CGNS, NETCDF_ASCII)
-MESH_FORMAT= SU2
+OUTPUT_FILES= ( RESTART, PARAVIEW_MULTIBLOCK, SURFACE_TECPLOT_ASCII )
+OUTPUT_WRT_FREQ= 1000
 %
-% Mesh output file
-MESH_OUT_FILENAME= mesh_out.su2
+HISTORY_OUTPUT= ( RMS_RES, FLOW_COEFF, STREAMWISE_PERIODIC, LINSOL )
 %
-% Restart flow input file
-SOLUTION_FILENAME= solution_flow
-%
-% Restart adjoint input file
-SOLUTION_ADJ_FILENAME= solution_adj
-%
-% Output file format (PARAVIEW, TECPLOT, STL)
-OUTPUT_FILES= (RESTART, PARAVIEW, SURFACE_PARAVIEW, PARAVIEW_MULTIBLOCK, SURFACE_PARAVIEW_ASCII, SURFACE_TECPLOT_ASCII )
-OUTPUT_WRT_FREQ= 10
-%
-% Output file convergence history (w/o extension) 
-%CONV_FILENAME= history
-%
-% Output file restart flow
-RESTART_FILENAME= solution_flow
-%
-% Output file restart adjoint
-RESTART_ADJ_FILENAME= restart_adj
-%
-% Output file flow (w/o extension) variables
-VOLUME_FILENAME= flow
-%
-% Output file adjoint (w/o extension) variables
-VOLUME_ADJ_FILENAME= adjoint
-%
-% Output objective function gradient (using continuous adjoint)
-GRAD_OBJFUNC_FILENAME= of_grad
-%
-% Output file surface flow coefficient (w/o extension)
-SURFACE_FILENAME= surface_flow
-%
-% Output file surface adjoint coefficient (w/o extension)
-SURFACE_ADJ_FILENAME= surface_adjoint
-%
-% Writing solution file frequency
-WRT_SOL_FREQ= 200
-%
-% Writing convergence history frequency
-WRT_CON_FREQ= 1
+SCREEN_OUTPUT= ( INNER_ITER, RMS_PRESSURE, RMS_VELOCITY-X, RMS_VELOCITY-Z, STREAMWISE_MASSFLOW )
+SCREEN_WRT_FREQ_INNER= 100
