Move GetStreamwise Properties

--- a/TestCases/incomp_navierstokes/streamwise_periodic/half_cylinder_2D/half_cylinder_2D.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/half_cylinder_2D/half_cylinder_2D.cfg
@@ -8,7 +8,7 @@
 % File Version 7.0.8 "Blackbird"                                               %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
+
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 %
 SOLVER= INC_NAVIER_STOKES
@@ -88,5 +88,7 @@ CONV_STARTITER= 10
 % ------------------------- INPUT/OUTPUT INFORMATION ----------------------.su2
 %
 MESH_FILENAME= channel_bump_2D.su2
+%
+SCREEN_WRT_FREQ_INNER= 100
 %
 OUTPUT_FILES= ( RESTART, PARAVIEW_MULTIBLOCK )
