fix crashing with 1 inner iter, update some regressions, fix more warnings

--- a/TestCases/rans_uq/naca0012/turb_NACA0012_uq_p1c1.cfg
+++ b/TestCases/rans_uq/naca0012/turb_NACA0012_uq_p1c1.cfg
@@ -257,4 +257,4 @@ OUTPUT_WRT_FREQ= 10000
 %
 %
 % Screen output 
-SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_TKE, RMS_DISSIPATION, LIFT, DRAG, AVG_CFL, LINSOL_ITER
+SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_TKE, RMS_DISSIPATION, LIFT, DRAG)
