--- a/TestCases/py_su2_nastran/fluid.cfg
+++ b/TestCases/py_su2_nastran/fluid.cfg
@@ -1,18 +1,18 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Unsteady periodic detached NACA0012 simulation             %
-% Author: Steffen Schotthöfer                                                  %
-% Institution: TU Kaiserslautern                                               %
-% Date: Jan 21, 2020                                                           %
-% File Version 7.0.1 "Blackbird" (or newer)                                    %
+% Case description: Unsteady FSI of a NACA 0012                                %
+% Author: Nicola Fonzi, Vittorio Cavalieri                                     %
+% Institution: Politecnico di Milano                                           %
+% Date: Dec 10, 2020                                                           %
+% File Version 7.0.8 "Blackbird" (or newer)                                    %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 %
 % Physical governing equations (EULER, NAVIER_STOKES, NS_PLASMA)
-%                               
+%
 SOLVER= RANS
 %
 % Specify turbulent model (NONE, SA, SA_NEG, SST)
@@ -165,7 +165,7 @@ CONV_RESIDUAL_MINVAL= -9.0
 %
 %
 % Mesh input file
-MESH_FILENAME= airfoil.su2	
+MESH_FILENAME= airfoil.su2
 %
 % Mesh input file format (SU2, CGNS, NETCDF_ASCII)
 MESH_FORMAT= SU2
@@ -182,7 +182,7 @@ SOLUTION_ADJ_FILENAME= restart_adj.dat
 % Output file format (PARAVIEW, TECPLOT, STL)
 TABULAR_FORMAT= CSV
 %
-% Output file convergence history (w/o extension) 
+% Output file convergence history (w/o extension)
 CONV_FILENAME= history
 %
 % Output file restart flow
