--- a/TestCases/py_su2_nastran/fsi.cfg
+++ b/TestCases/py_su2_nastran/fsi.cfg
@@ -1,10 +1,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                              %
 % SU2 configuration file                                                       %
-% Case description: FSI: Template                                              %
-% Author:                                                                      %
-% Institution:                                                                 %
-% Date:                                                                        %
-% File Version 7.0.2 "Blackbird"                                               %
+% Case description: Unsteady FSI of a NACA 0012                                %
+% Author: Nicola Fonzi, Vittorio Cavalieri                                     %
+% Institution: Politecnico di Milano                                           %
+% Date: Dec 10, 2020                                                           %
+% File Version 7.0.8 "Blackbird" (or newer)                                    %
+%                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%
 % INTEGER VALUES
