--- a/TestCases/py_su2_nastran/solid.cfg
+++ b/TestCases/py_su2_nastran/solid.cfg
@@ -1,11 +1,13 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% SU2 configuration file                                                         %
-% Case description: FSI: Vertical Cantilever in Channel using Python - Structure %
-% Author: Ruben Sanchez Fernandez                                                %
-% Institution: TU Kaiserslautern                                                 %
-% Date: 2020-03-04                                                               %
-% File Version 7.0.3 "Blackbird"                                                 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                              %
+% SU2 configuration file                                                       %
+% Case description: Unsteady FSI of a NACA 0012                                %
+% Author: Nicola Fonzi, Vittorio Cavalieri                                     %
+% Institution: Politecnico di Milano                                           %
+% Date: Dec 10, 2020                                                           %
+% File Version 7.0.8 "Blackbird" (or newer)                                    %
+%                                                                              %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%
 % INTEGER VALUES
 %%%%%%%%%%%%%%%%%%%%%%%
