--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -19,13 +19,13 @@ jobs:
         config_set: [BaseMPI, ReverseMPI, ForwardMPI, BaseNoMPI, ReverseNoMPI, ForwardNoMPI, BaseOMP]
         include:
           - config_set: BaseMPI
-            flags: '-Denable-pywrapper=true -Denable-tests=true -Denable-mpp=true --werror'
+            flags: '-Denable-pywrapper=true -Denable-tests=true --werror'
           - config_set: ReverseMPI
             flags: '-Denable-autodiff=true -Denable-normal=false -Denable-pywrapper=true -Denable-tests=true --werror'
           - config_set: ForwardMPI
             flags: '-Denable-directdiff=true -Denable-normal=false -Denable-tests=true --werror'
           - config_set: BaseNoMPI
-            flags: '-Denable-pywrapper=true -Dwith-mpi=disabled -Denable-tests=true -Denable-mpp=true --werror'
+            flags: '-Denable-pywrapper=true -Dwith-mpi=disabled -Denable-tests=true --werror'
           - config_set: ReverseNoMPI
             flags: '-Denable-autodiff=true -Denable-normal=false -Dwith-mpi=disabled -Denable-pywrapper=true -Denable-tests=true --werror'
           - config_set: ForwardNoMPI
