Fix Reg test and fix insufficient of #1177

--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/configFluid.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/configFluid.cfg
@@ -15,7 +15,7 @@ SOLVER= INC_RANS
 %
 KIND_TURB_MODEL= SST
 %
-OBJECTIVE_FUNCTION= TOTAL_AVG_TEMPERATURE
+OBJECTIVE_FUNCTION= AVG_TEMPERATURE
 OBJECTIVE_WEIGHT= 0.0
 %
 OPT_OBJECTIVE= NONE
