--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/configSolid.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/configSolid.cfg
@@ -13,7 +13,7 @@
 %
 SOLVER= HEAT_EQUATION
 %
-OBJECTIVE_FUNCTION= TOTAL_AVG_TEMPERATURE
+OBJECTIVE_FUNCTION= AVG_TEMPERATURE
 OBJECTIVE_WEIGHT= 1.0
 %
 OPT_OBJECTIVE= AVG_TOTALTEMP
