--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_3d/configMaster.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_3d/configMaster.cfg
@@ -21,7 +21,7 @@ OUTER_ITER = 15000
 %
 CONV_RESIDUAL_MINVAL= -26
 %
-SCREEN_OUTPUT= (OUTER_ITER, BGS_PRESSURE[0], BGS_TEMPERATURE[0], BGS_TEMPERATURE[1], STREAMWISE_MASSFLOW[0], STREAMWISE_DP[0], PRESSURE_DROP[0], AVG_TEMPERATURE[1] )
+SCREEN_OUTPUT= (OUTER_ITER, BGS_PRESSURE[0], BGS_TEMPERATURE[0], BGS_TEMPERATURE[1], STREAMWISE_MASSFLOW[0], STREAMWISE_DP[0], AVG_TEMPERATURE[1] )
 SCREEN_WRT_FREQ_OUTER= 100
 %
 OUTPUT_FILES= (RESTART, PARAVIEW_MULTIBLOCK)
