--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -90,7 +90,10 @@ su2_cfd_src += files(['solvers/CSolverFactory.cpp',
                       'solvers/CEulerSolver.cpp',
                       'solvers/CFEASolver.cpp',
                       'solvers/CFEM_DG_EulerSolver.cpp',
+                      'solvers/CFEM_DG_IncEulerSolver.cpp',
                       'solvers/CFEM_DG_NSSolver.cpp',
+                      'solvers/CFEM_DG_IncNSSolver.cpp',
+                      'solvers/CFEM_DG_SolverBase.cpp',
                       'solvers/CHeatSolver.cpp',
                       'solvers/CIncEulerSolver.cpp',
                       'solvers/CIncNSSolver.cpp',
