make turb solvers more efficient for explicit eval, update build systems

--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -161,6 +161,7 @@ su2_cfd_src += files(['integration/CIntegration.cpp',
                       'integration/CIntegrationFactory.cpp',
                       'integration/CSingleGridIntegration.cpp',
                       'integration/CMultiGridIntegration.cpp',
+                      'integration/CNewtonIntegration.cpp',
                       'integration/CStructuralIntegration.cpp',
                       'integration/CFEM_DG_Integration.cpp'])
 
