Started the implementation of the constructors of the DG solver

--- a/Common/src/geometry/fem_grid/meson.build
+++ b/Common/src/geometry/fem_grid/meson.build
@@ -4,4 +4,5 @@ common_src += files(['CDummyMesh_DG.cpp',
                      'CMeshFEM_DG.cpp',
                      'CPointFEM.cpp',
                      'CSurfaceElementFEM.cpp',
-                     'CVolumeElementFEM_Base.cpp'])
+                     'CVolumeElementFEM_Base.cpp',
+                     'CVolumeElementFEM_DG.cpp'])
