Implemented the constructors of the actual compressible DG solvers

--- a/Common/src/meson.build
+++ b/Common/src/meson.build
@@ -1,9 +1,8 @@
 common_include = include_directories('./')
-common_src =files(['graph_coloring_structure.cpp',
-           'CConfig.cpp',
-           'basic_types/ad_structure.cpp',
-           'wall_model.cpp',
-           '../include/parallelization/mpi_structure.cpp'])
+common_src =files(['CConfig.cpp',
+                   'basic_types/ad_structure.cpp',
+                   'wall_model.cpp',
+                   '../include/parallelization/mpi_structure.cpp'])
 
 subdir('linear_algebra')
 subdir('toolboxes')
