--- a/Common/src/toolboxes/meson.build
+++ b/Common/src/toolboxes/meson.build
@@ -1,4 +1,5 @@
 common_src += files(['CLinearPartitioner.cpp',
+                     'CGraphColoringStructure.cpp',
                      'printing_toolbox.cpp',
                      'C1DInterpolation.cpp',
                      'CSquareMatrixCM.cpp',
