add comment in input file of NEMO examples

--- a/TestCases/nonequilibrium/thermalbath/finitechemistry/thermalbath.cfg
+++ b/TestCases/nonequilibrium/thermalbath/finitechemistry/thermalbath.cfg
@@ -20,6 +20,7 @@ SOLVER= NEMO_EULER
 %
 GAS_MODEL= N2
 %
+%Initial gas composition in mass fractions
 GAS_COMPOSITION=(0.666667, 0.333333)
 %
 % Mathematical problem (DIRECT, CONTINUOUS_ADJOINT)
