--- a/TestCases/nonequilibrium/viscwedge/viscwedge.cfg
+++ b/TestCases/nonequilibrium/viscwedge/viscwedge.cfg
@@ -18,6 +18,7 @@ SOLVER= NEMO_NAVIER_STOKES
 %
 GAS_MODEL= AIR-5
 %
+%Initial gas composition in mass fractions
 GAS_COMPOSITION= (0.77, 0.23, 0.0, 0.0, 0.0)
 %
 % Mathematical problem (DIRECT, CONTINUOUS_ADJOINT)
