--- a/TestCases/py_wrapper/flatPlate_rigidMotion/flatPlate_rigidMotion_Conf.cfg
+++ b/TestCases/py_wrapper/flatPlate_rigidMotion/flatPlate_rigidMotion_Conf.cfg
@@ -22,10 +22,6 @@ KIND_TURB_MODEL= SST
 % Mathematical problem (DIRECT, CONTINUOUS_ADJOINT, DISCRETE_ADJOINT)
 MATH_PROBLEM= DIRECT
 %
-%
-% Axisymmetric simulation, only compressible flows (NO, YES)
-AXISYMMETRIC= NO
-%
 % Restart solution (NO, YES)
 RESTART_SOL= NO
 %
@@ -37,11 +33,11 @@ DISCARD_INFILES= NO
 %
 % System of measurements (SI, US)
 % International system of units (SI): ( meters, kilograms, Kelvins,
-%                                       Newtons = kg m/s^2, Pascals = N/m^2, 
+%                                       Newtons = kg m/s^2, Pascals = N/m^2,
 %                                       Density = kg/m^3, Speed = m/s,
 %                                       Equiv. Area = m^2 )
-% United States customary units (US): ( inches, slug, Rankines, lbf = slug ft/s^2, 
-%                                       psf = lbf/ft^2, Density = slug/ft^3, 
+% United States customary units (US): ( inches, slug, Rankines, lbf = slug ft/s^2,
+%                                       psf = lbf/ft^2, Density = slug/ft^3,
 %                                       Speed = ft/s, Equiv. Area = ft^2 )
 SYSTEM_MEASUREMENTS= SI
 
@@ -179,41 +175,11 @@ RESTART_ITER= 0
 
 TIME_ITER=9999
 % ----------------------- DYNAMIC MESH DEFINITION -----------------------------%
-% Type of dynamic mesh (NONE, RIGID_MOTION, DEFORMING, ROTATING_FRAME,
-%                       MOVING_WALL, STEADY_TRANSLATION, FLUID_STRUCTURE,
-%                       AEROELASTIC, ELASTICITY, EXTERNAL,
-%                       AEROELASTIC_RIGID_MOTION, GUST)
-SURFACE_MOVEMENT= FLUID_STRUCTURE
 %
-% Motion mach number (non-dimensional). Used for initializing a viscous flow
-% with the Reynolds number and for computing force coeffs. with dynamic meshes.
-MACH_MOTION= 0.03059
+DEFORM_MESH = YES
+MARKER_DEFORM_MESH = (plate)
 %
-% Moving wall boundary marker(s) (NONE = no marker, ignored for RIGID_MOTION)
-MARKER_MOVING= ( plate )
-%
-% Coordinates of the motion origin
-SURFACE_MOTION_ORIGIN= -0.0028 0.0 0.0
-%
-% Move Motion Origin for marker moving (1 or 0)
-MOVE_MOTION_ORIGIN = 1
-
-% ----------------------- BODY FORCE DEFINITION -------------------------------%
-%
-% Apply a body force as a source term (NO, YES)
-BODY_FORCE= NO
-%
-% Vector of body force values (BodyForce_X, BodyForce_Y, BodyForce_Z)
-BODY_FORCE_VECTOR= ( 0.0, 0.0, 0.0 )
-
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
-%
-% Euler wall boundary marker(s) (NONE = no marker)
-MARKER_EULER= ( NONE )
-%
-% Navier-Stokes (no-slip), constant heat flux wall  marker(s) (NONE = no marker)
-% Format: ( marker name, constant heat flux (J/m^2), ... )
-%MARKER_HEATFLUX= ( plate, 1000.0 )
 %
 % Navier-Stokes (no-slip), isothermal wall marker(s) (NONE = no marker)
 % Format: ( marker name, constant wall temperature (K), ... )
@@ -230,22 +196,6 @@ MARKER_PLOTTING = ( plate )
 % Marker(s) of the surface where the non-dimensional coefficients are evaluated.
 MARKER_MONITORING = ( plate )
 %
-% Viscous wall markers for which wall functions must be applied. (NONE = no marker)
-% Format: ( marker name, wall function type, ... )
-MARKER_WALL_FUNCTIONS= ( plate, NO_WALL_FUNCTION )
-%
-% Marker(s) of the surface where custom thermal BC's are defined.
-MARKER_PYTHON_CUSTOM = (NONE)
-%
-% Marker(s) of the surface where obj. func. (design problem) will be evaluated
-MARKER_DESIGNING = ( NONE )
-%
-% Marker(s) of the surface that is going to be analyzed in detail (massflow, average pressure, distortion, etc)
-MARKER_ANALYZE = ( NONE )
-%
-% Method to compute the average value in MARKER_ANALYZE (AREA, MASSFLUX).
-MARKER_ANALYZE_AVERAGE = MASSFLUX
-
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
 % Numerical method for spatial gradients (GREEN_GAUSS, WEIGHTED_LEAST_SQUARES)
@@ -254,39 +204,6 @@ NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 % CFL number (initial value for the adaptive CFL number)
 CFL_NUMBER= 7.0
 %
-% Adaptive CFL number (NO, YES)
-CFL_ADAPT= NO
-%
-% Parameters of the adaptive CFL number (factor down, factor up, CFL min value,
-%                                        CFL max value )
-CFL_ADAPT_PARAM= ( 1.5, 0.5, 1.25, 50.0 )
-%
-% Maximum Delta Time in local time stepping simulations
-MAX_DELTA_TIME= 1E6
-%
-% Runge-Kutta alpha coefficients
-RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
-%
-% Objective function in gradient evaluation   (DRAG, LIFT, SIDEFORCE, MOMENT_X,
-%                                             MOMENT_Y, MOMENT_Z, EFFICIENCY,
-%                                             EQUIVALENT_AREA, NEARFIELD_PRESSURE,
-%                                             FORCE_X, FORCE_Y, FORCE_Z, THRUST,
-%                                             TORQUE, TOTAL_HEATFLUX,
-%                                             MAXIMUM_HEATFLUX, INVERSE_DESIGN_PRESSURE,
-%                                             INVERSE_DESIGN_HEATFLUX, SURFACE_TOTAL_PRESSURE, 
-%                                             SURFACE_MASSFLOW, SURFACE_STATIC_PRESSURE, SURFACE_MACH)
-% For a weighted sum of objectives: separate by commas, add OBJECTIVE_WEIGHT and MARKER_MONITORING in matching order.
-OBJECTIVE_FUNCTION= DRAG
-%
-% List of weighting values when using more than one OBJECTIVE_FUNCTION. Separate by commas and match with MARKER_MONITORING.
-OBJECTIVE_WEIGHT = 1.0
-%
-% Reference coefficient (sensitivity) for detecting sharp edges.
-REF_SHARP_EDGES= 3.0
-%
-% Remove sharp edges from the sensitivity evaluation (NO, YES)
-SENS_REMOVE_SHARP= NO
-
 % ----------- SLOPE LIMITER AND DISSIPATION SENSOR DEFINITION -----------------%
 %
 % Monotonic Upwind Scheme for Conservation Laws (TVD) in the flow equations.
@@ -301,52 +218,6 @@ SLOPE_LIMITER_FLOW= VENKATAKRISHNAN
 %           Required for 2nd order upwind schemes (NO, YES)
 MUSCL_TURB= NO
 %
-% Slope limiter (NONE, VENKATAKRISHNAN, VENKATAKRISHNAN_WANG,
-%                BARTH_JESPERSEN, VAN_ALBADA_EDGE)
-SLOPE_LIMITER_TURB= VENKATAKRISHNAN
-%
-% Monotonic Upwind Scheme for Conservation Laws (TVD) in the adjoint flow equations.
-%           Required for 2nd order upwind schemes (NO, YES)
-MUSCL_ADJFLOW= YES
-%
-% Slope limiter (NONE, VENKATAKRISHNAN, BARTH_JESPERSEN, VAN_ALBADA_EDGE,
-%                SHARP_EDGES, WALL_DISTANCE)
-SLOPE_LIMITER_ADJFLOW= VENKATAKRISHNAN
-%
-% Monotonic Upwind Scheme for Conservation Laws (TVD) in the turbulence adjoint equations.
-%           Required for 2nd order upwind schemes (NO, YES)
-MUSCL_ADJTURB= NO
-%
-% Slope limiter (NONE, VENKATAKRISHNAN, BARTH_JESPERSEN, VAN_ALBADA_EDGE)
-SLOPE_LIMITER_ADJTURB= VENKATAKRISHNAN
-%
-% Coefficient for the Venkat's limiter (upwind scheme). A larger values decrease
-%             the extent of limiting, values approaching zero cause
-%             lower-order approximation to the solution (0.05 by default)
-VENKAT_LIMITER_COEFF= 0.05
-%
-% Coefficient for the adjoint sharp edges limiter (3.0 by default).
-ADJ_SHARP_LIMITER_COEFF= 3.0
-%
-% Freeze the value of the limiter after a number of iterations
-LIMITER_ITER= 999999
-%
-% 1st order artificial dissipation coefficients for
-%     the Lax–Friedrichs method ( 0.15 by default )
-LAX_SENSOR_COEFF= 0.15
-%
-% 2nd and 4th order artificial dissipation coefficients for
-%     the JST method ( 0.5, 0.02 by default )
-JST_SENSOR_COEFF= ( 0.5, 0.02 )
-%
-% 1st order artificial dissipation coefficients for
-%     the adjoint Lax–Friedrichs method ( 0.15 by default )
-ADJ_LAX_SENSOR_COEFF= 0.15
-%
-% 2nd, and 4th order artificial dissipation coefficients for
-%     the adjoint JST method ( 0.5, 0.02 by default )
-ADJ_JST_SENSOR_COEFF= ( 0.5, 0.02 )
-
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
 % Linear solver or smoother for implicit formulations (BCGSTAB, FGMRES, SMOOTHER)
@@ -407,9 +278,6 @@ CONV_NUM_METHOD_TURB= SCALAR_UPWIND
 % Time discretization (EULER_IMPLICIT)
 TIME_DISCRE_TURB= EULER_IMPLICIT
 %
-% Reduction factor of the CFL coefficient in the turbulence problem
-CFL_REDUCTION_TURB= 1.0
-%
 % Relaxation coefficient
 
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
@@ -432,17 +300,10 @@ DEFORM_CONSOLE_OUTPUT= YES
 % Minimum residual criteria for the linear solver convergence of grid deformation
 DEFORM_LINEAR_SOLVER_ERROR= 1E-14
 %
-% Deformation coefficient (linear elasticity limits from -1.0 to 0.5, a larger
-% value is also possible)
-DEFORM_COEFF = 1E6
 %
 % Type of element stiffness imposed for FEA mesh deformation (INVERSE_VOLUME,
 %                                           WALL_DISTANCE, CONSTANT_STIFFNESS)
-DEFORM_STIFFNESS_TYPE= INVERSE_VOLUME
-%
-% Deform the grid only close to the surface. It is possible to specify how much
-% of the volumetric grid is going to be deformed in meters or inches (1E6 by default)
-DEFORM_LIMIT = 1E6
+DEFORM_STIFFNESS_TYPE= WALL_DISTANCE
 
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 % Convergence criteria (CAUCHY, RESIDUAL)
@@ -472,55 +333,22 @@ MESH_FILENAME= 2D_FlatPlate_Rounded.su2
 % Mesh input file format (SU2, CGNS)
 MESH_FORMAT= SU2
 %
-% Mesh output file
-MESH_OUT_FILENAME= mesh_out.su2
-%
-% Restart flow input file
-SOLUTION_FILENAME= restart_flow.dat
-%
-% Restart adjoint input file
-SOLUTION_ADJ_FILENAME= solution_adj.dat
 %
 % Output file format (TECPLOT, TECPLOT_BINARY, PARAVIEW,
 %                     FIELDVIEW, FIELDVIEW_BINARY)
-TABULAR_FORMAT= CSV
+TABULAR_FORMAT= TECPLOT
 %
 % Output file convergence history (w/o extension)
 CONV_FILENAME= history
 %
-% Output file with the forces breakdown
-BREAKDOWN_FILENAME= forces_breakdown.dat
-%
-% Output file restart flow
-RESTART_FILENAME= restart_flow.dat
-%
-% Output file restart adjoint
-RESTART_ADJ_FILENAME= restart_adj.dat
-%
 % Output file flow (w/o extension) variables
 VOLUME_FILENAME= flow
-%
-% Output file adjoint (w/o extension) variables
-VOLUME_ADJ_FILENAME= adjoint
-%
-% Output Objective function
-VALUE_OBJFUNC_FILENAME= of_eval.dat
-%
-% Output objective function gradient (using continuous adjoint)
-GRAD_OBJFUNC_FILENAME= of_grad.dat
 %
 % Output file surface flow coefficient (w/o extension)
 SURFACE_FILENAME= surface_flow
 %
-% Output file surface adjoint coefficient (w/o extension)
-SURFACE_ADJ_FILENAME= surface_adjoint
-%
 % Writing solution file frequency for physical time steps (dual time)
 OUTPUT_WRT_FREQ= 3
-%
-%
-% Read binary restart files (YES, NO)
-READ_BINARY_RESTART= YES
 %
 % Screen output
 SCREEN_OUTPUT= (TIME_ITER, INNER_ITER, RMS_DENSITY, RMS_TKE, RMS_DISSIPATION, LIFT, DRAG)
