--- a/TestCases/py_wrapper/flatPlate_rigidMotion/flatPlate_rigidMotion_Conf.cfg
+++ b/TestCases/py_wrapper/flatPlate_rigidMotion/flatPlate_rigidMotion_Conf.cfg
@@ -25,22 +25,6 @@ MATH_PROBLEM= DIRECT
 % Restart solution (NO, YES)
 RESTART_SOL= NO
 %
-% Discard the data storaged in the solution and geometry files
-% e.g. AOA, dCL/dAoA, dCD/dCL, iter, etc.
-% Note that AoA in the solution and geometry files is critical
-% to aero design using AoA as a variable. (NO, YES)
-DISCARD_INFILES= NO
-%
-% System of measurements (SI, US)
-% International system of units (SI): ( meters, kilograms, Kelvins,
-%                                       Newtons = kg m/s^2, Pascals = N/m^2,
-%                                       Density = kg/m^3, Speed = m/s,
-%                                       Equiv. Area = m^2 )
-% United States customary units (US): ( inches, slug, Rankines, lbf = slug ft/s^2,
-%                                       psf = lbf/ft^2, Density = slug/ft^3,
-%                                       Speed = ft/s, Equiv. Area = ft^2 )
-SYSTEM_MEASUREMENTS= SI
-
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
 % Mach number (non-dimensional, based on the free-stream values)
@@ -48,9 +32,6 @@ MACH_NUMBER= 0.03059
 %
 % Angle of attack (degrees, only for compressible flows)
 AOA= 0.0
-%
-% Side-slip angle (degrees, only for compressible flows)
-SIDESLIP_ANGLE= 0.0
 %
 % Init option to choose between Reynolds (default) or thermodynamics quantities
 % for initializing the solution (REYNOLDS, TD_CONDITIONS)
@@ -60,9 +41,6 @@ INIT_OPTION= REYNOLDS
 % initializing the solution (TEMPERATURE_FS, DENSITY_FS)
 FREESTREAM_OPTION= TEMPERATURE_FS
 %
-% Free-stream pressure (101325.0 N/m^2, 2116.216 psf by default)
-FREESTREAM_PRESSURE= 101325.0
-%
 % Free-stream temperature (288.15 K, 518.67 R by default)
 FREESTREAM_TEMPERATURE= 293.15
 %
@@ -71,18 +49,7 @@ REYNOLDS_NUMBER= 24407.25244
 %
 % Reynolds length (1 m, 1 inch by default)
 REYNOLDS_LENGTH= 0.035
-
-% -------------------- INCOMPRESSIBLE FREE-STREAM DEFINITION ------------------%
 %
-% Free-stream density (1.2886 Kg/m^3, 0.0025 slug/ft^3 by default)
-FREESTREAM_DENSITY= 1.204
-%
-% Free-stream velocity (1.0 m/s, 1.0 ft/s by default)
-FREESTREAM_VELOCITY= ( 1.0, 0.00, 0.00 )
-%
-% Free-stream viscosity (1.853E-5 N s/m^2, 3.87E-7 lbf s/ft^2 by default)
-FREESTREAM_VISCOSITY= 1.82E-5
-
 % ---------------------- REFERENCE VALUE DEFINITION ---------------------------%
 %
 % Reference origin for moment computation (m or in)
@@ -97,60 +64,25 @@ REF_LENGTH= 0.035
 % calculation) (m^2 or in^2)
 REF_AREA= 0.035
 %
-% Aircraft semi-span (0 implies automatic calculation) (m or in)
-SEMI_SPAN= 0.0
-%
 % Flow non-dimensionalization (DIMENSIONAL, FREESTREAM_PRESS_EQ_ONE,
 %                              FREESTREAM_VEL_EQ_MACH, FREESTREAM_VEL_EQ_ONE)
 REF_DIMENSIONALIZATION= DIMENSIONAL
-
+%
 % ---- IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
 %
 % Different gas model (STANDARD_AIR, IDEAL_GAS, VW_GAS, PR_GAS)
 FLUID_MODEL= STANDARD_AIR
 %
-% Ratio of specific heats (1.4 default and the value is hardcoded
-%                          for the model STANDARD_AIR)
-GAMMA_VALUE= 1.4
-%
-% Specific gas constant (287.058 J/kg*K default and this value is hardcoded
-%                        for the model STANDARD_AIR)
-GAS_CONSTANT= 287.058
-%
-% Critical Temperature (131.00 K by default)
-CRITICAL_TEMPERATURE= 131.00
-%
-% Critical Pressure (3588550.0 N/m^2 by default)
-CRITICAL_PRESSURE= 3588550.0
-%
-% Acentri factor (0.035 (air))
-ACENTRIC_FACTOR= 0.035
-
 % --------------------------- VISCOSITY MODEL ---------------------------------%
 %
 % Viscosity model (SUTHERLAND, CONSTANT_VISCOSITY).
 VISCOSITY_MODEL= SUTHERLAND
 %
-% Molecular Viscosity that would be constant (1.716E-5 by default)
-MU_CONSTANT= 1.716E-5
-%
-% Sutherland Viscosity Ref (1.716E-5 default value for AIR SI)
-MU_REF= 1.716E-5
-%
-% Sutherland Temperature Ref (273.15 K default value for AIR SI)
-MU_T_REF= 273.15
-%
-% Sutherland constant (110.4 default value for AIR SI)
-SUTHERLAND_CONSTANT= 110.4
-
 % --------------------------- THERMAL CONDUCTIVITY MODEL ----------------------%
 %
 % Conductivity model (CONSTANT_CONDUCTIVITY, CONSTANT_PRANDTL).
 CONDUCTIVITY_MODEL= CONSTANT_PRANDTL
 %
-% Molecular Thermal Conductivity that would be constant (0.0257 by default)
-KT_CONSTANT= 0.0257
-
 % ------------------------- UNSTEADY SIMULATION -------------------------------%
 %
 TIME_DOMAIN=YES
@@ -163,17 +95,13 @@ TIME_STEP= 0.003
 %
 % Total Physical Time for dual time stepping simulations (s)
 MAX_TIME= 1.0
-%
-% Unsteady Courant-Friedrichs-Lewy number of the finest grid
-UNST_CFL_NUMBER= 0.0
+TIME_ITER = 9999
 %
 % Number of internal iterations (dual time method)
 INNER_ITER= 10
 %
 % Iteration number to begin unsteady restarts
 RESTART_ITER= 0
-
-TIME_ITER=9999
 % ----------------------- DYNAMIC MESH DEFINITION -----------------------------%
 %
 DEFORM_MESH = YES
@@ -208,11 +136,7 @@ CFL_NUMBER= 7.0
 %
 % Monotonic Upwind Scheme for Conservation Laws (TVD) in the flow equations.
 %           Required for 2nd order upwind schemes (NO, YES)
-MUSCL_FLOW= YES
-%
-% Slope limiter (NONE, VENKATAKRISHNAN, VENKATAKRISHNAN_WANG,
-%                BARTH_JESPERSEN, VAN_ALBADA_EDGE)
-SLOPE_LIMITER_FLOW= VENKATAKRISHNAN
+MUSCL_FLOW= NO
 %
 % Monotonic Upwind Scheme for Conservation Laws (TVD) in the turbulence equations.
 %           Required for 2nd order upwind schemes (NO, YES)
@@ -238,26 +162,8 @@ LINEAR_SOLVER_ITER= 10
 % -------------------------- MULTIGRID PARAMETERS -----------------------------%
 %
 % Multi-grid levels (0 = no multi-grid)
-MGLEVEL= 3
+MGLEVEL= 0
 %
-% Multi-grid cycle (V_CYCLE, W_CYCLE, FULLMG_CYCLE)
-MGCYCLE= W_CYCLE
-%
-% Multi-grid pre-smoothing level
-MG_PRE_SMOOTH= ( 1, 2, 3, 3 )
-%
-% Multi-grid post-smoothing level
-MG_POST_SMOOTH= ( 0, 0, 0, 0 )
-%
-% Jacobi implicit smoothing of the correction
-MG_CORRECTION_SMOOTH= ( 0, 0, 0, 0 )
-%
-% Damping factor for the residual restriction
-MG_DAMP_RESTRICTION= 0.75
-%
-% Damping factor for the correction prolongation
-MG_DAMP_PROLONGATION= 0.75
-
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
 % Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, HLLC,
@@ -268,8 +174,7 @@ CONV_NUM_METHOD_FLOW= JST
 % Time discretization (RUNGE-KUTTA_EXPLICIT, EULER_IMPLICIT, EULER_EXPLICIT)
 TIME_DISCRE_FLOW= EULER_IMPLICIT
 %
-% Relaxation coefficient
-
+%
 % -------------------- TURBULENT NUMERICAL METHOD DEFINITION ------------------%
 %
 % Convective numerical method (SCALAR_UPWIND)
@@ -278,8 +183,6 @@ CONV_NUM_METHOD_TURB= SCALAR_UPWIND
 % Time discretization (EULER_IMPLICIT)
 TIME_DISCRE_TURB= EULER_IMPLICIT
 %
-% Relaxation coefficient
-
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
 %
 % Linear solver or smoother for implicit formulations (FGMRES, RESTARTED_FGMRES, BCGSTAB)
@@ -304,27 +207,7 @@ DEFORM_LINEAR_SOLVER_ERROR= 1E-14
 % Type of element stiffness imposed for FEA mesh deformation (INVERSE_VOLUME,
 %                                           WALL_DISTANCE, CONSTANT_STIFFNESS)
 DEFORM_STIFFNESS_TYPE= WALL_DISTANCE
-
-% --------------------------- CONVERGENCE PARAMETERS --------------------------%
-% Convergence criteria (CAUCHY, RESIDUAL)
 %
-CONV_CRITERIA= CAUCHY
-%
-%
-% Min value of the residual (log10 of the residual)
-CONV_RESIDUAL_MINVAL= -10
-%
-% Start convergence criteria at iteration number
-CONV_STARTITER= 4
-%
-% Number of elements to apply the criteria
-CONV_CAUCHY_ELEMS= 10
-%
-% Epsilon to control the series convergence
-CONV_CAUCHY_EPS= 1E-6
-%
-%
-
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
 % Mesh input file
@@ -352,3 +235,4 @@ OUTPUT_WRT_FREQ= 3
 %
 % Screen output
 SCREEN_OUTPUT= (TIME_ITER, INNER_ITER, RMS_DENSITY, RMS_TKE, RMS_DISSIPATION, LIFT, DRAG)
+HISTORY_OUTPUT=(ITER,RMS_RES,AERO_COEFF)
