Changing some reg test. CHT 2D.

--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/FD_configMaster.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/FD_configMaster.cfg
@@ -37,7 +37,7 @@ OUTPUT_WRT_FREQ= 10000
 MESH_FILENAME= 2D-PinArray_FFD.su2
 MESH_FORMAT= SU2
 %
-% Options that have to be kept for finite_differences.py
+% Options that have to be kept for finite_differences.py. Otherwise it won't run.
 RESTART_SOL= NO
 MARKER_MONITORING= ( NONE )
 SOLUTION_FILENAME= restart
@@ -69,7 +69,8 @@ DV_KIND= FFD_SETTING
 %DV_KIND= FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D
 %
 % Marker of the surface in which we are going apply the shape deformation
-DV_MARKER= ( fluid_pin2_interface, solid_pin2_interface )
+MARKER_SYM= ( fluid_symmetry  )
+DV_MARKER= ( fluid_pin2_interface, solid_pin2_interface, fluid_symmetry )
 %
 % Parameters of the shape deformation
 % - FFD_SETTING ( 1.0 )
@@ -109,15 +110,15 @@ DEFORM_COEFF = 1E6
 %
 % For gradient validation uncomment the other DV's!
 DEFINITION_DV= \
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 0, 1, 0.0, 1.0 );\
-%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 1, 1, 0.0, 1.0 );\
-%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 2, 1, 0.0, 1.0 );\
-%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 3, 1, 0.0, 1.0 );\
-%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 4, 1, 0.0, 1.0 );\
-%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 5, 1, 0.0, 1.0 );\
-%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 6, 1, 0.0, 1.0 );\
-%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 7, 1, 0.0, 1.0 );\
-%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 8, 1, 0.0, 1.0 )
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 0, 1, 0.0, 1.0 );\
+%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 1, 1, 0.0, 1.0 );\
+%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 2, 1, 0.0, 1.0 );\
+%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 3, 1, 0.0, 1.0 );\
+%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 4, 1, 0.0, 1.0 );\
+%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 5, 1, 0.0, 1.0 );\
+%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 6, 1, 0.0, 1.0 );\
+%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 7, 1, 0.0, 1.0 );\
+%( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 8, 1, 0.0, 1.0 )
 
 %DEFORM_MESH= YES
 
