--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/DA_configMaster.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/DA_configMaster.cfg
@@ -60,7 +60,8 @@ FFD_CONTINUITY= NO_DERIVATIVE
 DV_KIND= FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D
 %
 % Marker of the surface in which we are going apply the shape deformation
-DV_MARKER= ( fluid_pin2_interface, solid_pin2_interface )
+MARKER_SYM= ( fluid_symmetry  )
+DV_MARKER= ( fluid_pin2_interface, solid_pin2_interface, fluid_symmetry )
 %
 % Parameters of the shape deformation
 % - FFD_SETTING ( 1.0 )
@@ -99,14 +100,14 @@ DEFORM_STIFFNESS_TYPE= WALL_DISTANCE
 DEFORM_COEFF = 1E6
 %
 DEFINITION_DV= \
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 0, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 1, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 2, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 3, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 4, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 5, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 6, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 7, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 8, 1, 0.0, 1.0 )
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 0, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 1, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 2, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 3, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 4, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 5, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 6, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 7, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 8, 1, 0.0, 1.0 )
 
 %DEFORM_MESH= YES
