--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/configMaster.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/configMaster.cfg
@@ -54,16 +54,23 @@ FFD_CONTINUITY= NO_DERIVATIVE
 %
 % ----------------------- DESIGN VARIABLE PARAMETERS --------------------------%
 %
+% Config options for writing the FFD-box into the mesh.
+% Comment these options if they appear elsewhere in the .cfg file.
 %DV_KIND= FFD_SETTING
+%DV_PARAM= ( 1.0 )
+%DV_VALUE= 1.0
+%MESH_FILENAME= 2D-PinArray.su2
+%MESH_OUT_FILENAME= 2D-PinArray_FFD.su2
+MARKER_SYM= ( fluid_symmetry  )
+
 DV_KIND= FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D
 %
 % Marker of the surface in which we are going apply the shape deformation
-DV_MARKER= ( fluid_pin2_interface, solid_pin2_interface )
+DV_MARKER= ( fluid_pin2_interface, solid_pin2_interface, fluid_symmetry )
 %
 % Parameters of the shape deformation
 % - FFD_SETTING ( 1.0 )
 % - FFD_CONTROL_POINT_2D ( FFD_BoxTag, i_Ind, j_Ind, x_Disp, y_Disp )
-%DV_PARAM= ( 1.0 )
 DV_PARAM= \
 ( BOX, 0, 1, 0.0, 1.0);\
 ( BOX, 1, 1, 0.0, 1.0);\
@@ -76,7 +83,6 @@ DV_PARAM= \
 ( BOX, 8, 1, 0.0, 1.0)
 %
 % Value of the shape deformation
-%DV_VALUE= 1.0
 DV_VALUE= 1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0
 %
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
@@ -97,14 +103,14 @@ DEFORM_STIFFNESS_TYPE= WALL_DISTANCE
 DEFORM_COEFF = 1E6
 %
 DEFINITION_DV= \
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 0, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 1, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 2, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 3, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 4, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 5, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 6, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 7, 1, 0.0, 1.0 );\
-( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface | BOX, 8, 1, 0.0, 1.0 )
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 0, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 1, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 2, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 3, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 4, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 5, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 6, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 7, 1, 0.0, 1.0 );\
+( 19, 1.0 | fluid_pin2_interface, solid_pin2_interface, fluid_symmetry | BOX, 8, 1, 0.0, 1.0 )
 
 %DEFORM_MESH= YES
