update meson for mpich

--- a/meson.build
+++ b/meson.build
@@ -178,6 +178,13 @@ if get_option('enable-librom')
 
  endif
 
+extra_deps = get_option('extra-deps').split(',')
+foreach dep : extra_deps
+  if dep != ''
+   su2_deps += dependency(dep)
+  endif
+endforeach
+
 catch2_dep = declare_dependency(include_directories: 'externals/catch2/')
 
 # compile common library
