changed testcase a bit

--- a/TestCases/incomp_navierstokes/streamwise_periodic/pinArray_2d/sp_pinArray_2d_dp_hf_tp.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/pinArray_2d/sp_pinArray_2d_dp_hf_tp.cfg
@@ -12,7 +12,6 @@
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 %
 SOLVER= INC_RANS
-%
 KIND_TURB_MODEL= SST
 %
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
@@ -107,17 +106,19 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
 CONV_CRITERIA= RESIDUAL
-CONV_RESIDUAL_MINVAL= -26
-CONV_STARTITER= 100000000
+CONV_FIELD= RMS_TEMPERATURE
+CONV_RESIDUAL_MINVAL= -4.07
+CONV_STARTITER= 10
 %
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
 MESH_FILENAME= fluid_FFD.su2
 %
 SCREEN_OUTPUT= (INNER_ITER, RMS_PRESSURE, RMS_TEMPERATURE, STREAMWISE_MASSFLOW, STREAMWISE_DP)
-SCREEN_WRT_FREQ_INNER= 25
+SCREEN_WRT_FREQ_INNER= 100
 %
 HISTORY_OUTPUT= ( ITER, RMS_RES, STREAMWISE_PERIODIC, FLOW_COEFF, LINSOL, AERO_COEFF )
+CONV_FILENAME= history_dptp
 %
 OUTPUT_FILES= ( RESTART, PARAVIEW_MULTIBLOCK )
 VOLUME_OUTPUT= ( COORDINATES, SOLUTION, RESIDUAL, PRIMITIVE )
