--- a/TestCases/incomp_navierstokes/streamwise_periodic/pinArray_2d/sp_pinArray_2d_mf_hf.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/pinArray_2d/sp_pinArray_2d_mf_hf.cfg
@@ -12,7 +12,6 @@
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 %
 SOLVER= INC_RANS
-%
 KIND_TURB_MODEL= SST
 %
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
@@ -50,10 +49,12 @@ PRANDTL_TURB= 0.90
 KIND_STREAMWISE_PERIODIC= MASSFLOW
 STREAMWISE_PERIODIC_MASSFLOW= 0.85
 STREAMWISE_PERIODIC_PRESSURE_DROP= 208.023676
-INC_OUTLET_DAMPING= 0.0001
+INC_OUTLET_DAMPING= 0.01
 %
 STREAMWISE_PERIODIC_TEMPERATURE= NO
-STREAMWISE_PERIODIC_OUTLET_HEAT= -6283.185307
+% Computation of outlet heat: Heatflux * Area = Heatflux * pi * radius (as we have an accumulated full circle)
+%                             5e5[W/m] * pi * 2e-3[m]
+STREAMWISE_PERIODIC_OUTLET_HEAT= -3141.5926
 %
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
@@ -78,7 +79,7 @@ MARKER_ANALYZE_AVERAGE = MASSFLUX
 %
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
-ITER= 3500
+ITER= 10000
 NUM_METHOD_GRAD= GREEN_GAUSS
 CFL_NUMBER= 1e2
 %
@@ -108,17 +109,19 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
 CONV_CRITERIA= RESIDUAL
-CONV_RESIDUAL_MINVAL= -26
-CONV_STARTITER= 100000000
+CONV_FIELD= RMS_TEMPERATURE
+CONV_RESIDUAL_MINVAL= -10.9
+CONV_STARTITER= 10
 %
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
 MESH_FILENAME= fluid_FFD.su2
 %
 SCREEN_OUTPUT= (INNER_ITER, RMS_PRESSURE, RMS_TEMPERATURE, STREAMWISE_MASSFLOW, STREAMWISE_DP)
-SCREEN_WRT_FREQ_INNER= 25
+SCREEN_WRT_FREQ_INNER= 100
 %
 HISTORY_OUTPUT= ( ITER, RMS_RES, STREAMWISE_PERIODIC, FLOW_COEFF, LINSOL, AERO_COEFF )
+CONV_FILENAME= history_mfhf
 %
 OUTPUT_FILES= ( RESTART, PARAVIEW_MULTIBLOCK )
 VOLUME_OUTPUT= ( COORDINATES, SOLUTION, RESIDUAL, PRIMITIVE )
