--- a/config_template.cfg
+++ b/config_template.cfg
@@ -711,8 +711,8 @@ STREAMWISE_PERIODIC_TEMPERATURE= NO
 %
 % Prescibe integrated heat [W] extracted at the periodic "outlet".
 % Only active if STREAMWISE_PERIODIC_TEMPERATURE= NO.
-% If set to zero, the heat is integrated by the program over the MARKER_HEATFLUX.
-% Are MARKER_ISOTHERMAL possible? they should be.
+% If set to zero, the heat is integrated automatically over all present MARKER_HEATFLUX.
+% Upon convergence, the area averaged inlet temperature will be INC_TEMPERATURE_INIT.
 % Defaults to 0.0.
 STREAMWISE_PERIODIC_OUTLET_HEAT= 0.0
 %
