Fix typos in template, changed streamwise readme a bit.

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -689,10 +689,10 @@ BODY_FORCE_VECTOR= ( 0.0, 0.0, 0.0 )
 
 % --------------------- STREAMWISE PERIODICITY DEFINITION ---------------------%
 %
-% Generally for streamwise periodicty one has to set MARKER_PERIODIC= (<inlet>, <outlet>, ...)
-% appropriatley as a boundary condition.
+% Generally for streamwise periodictiy one has to set MARKER_PERIODIC= (<inlet>, <outlet>, ...)
+% appropriately as a boundary condition.
 %
-% Specify type of streamwise periodicty (default=NONE, PRESSURE_DROP, MASSFLOW)
+% Specify type of streamwise periodictiy (default=NONE, PRESSURE_DROP, MASSFLOW)
 KIND_STREAMWISE_PERIODIC= NONE
 %
 % Delta P [Pa] value that drives the flow as a source term in the momentum equations.
@@ -705,11 +705,11 @@ STREAMWISE_PERIODIC_PRESSURE_DROP= 1.0
 STREAMWISE_PERIODIC_MASSFLOW= 0.0
 %
 % Use streamwise periodic temperature (default=NO, YES)
-% If YES, the heatflux is taken out at the outlet
+% If NO, the heatflux is taken out at the outlet.
 % This option is only necessary if INC_ENERGY_EQUATION=YES
 STREAMWISE_PERIODIC_TEMPERATURE= NO
 %
-% Prescibe integrated heat [W] extracted at the periodic "outlet".
+% Prescribe integrated heat [W] extracted at the periodic "outlet".
 % Only active if STREAMWISE_PERIODIC_TEMPERATURE= NO.
 % If set to zero, the heat is integrated automatically over all present MARKER_HEATFLUX.
 % Upon convergence, the area averaged inlet temperature will be INC_TEMPERATURE_INIT.
