Various smaller changes. Mainly spelling.

--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_3d/configFluid.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_3d/configFluid.cfg
@@ -1,11 +1,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Unit Cell flow around pin array (fluid)
-% Author: T. Kattmann
-% Institution: Robert Bosch GmbH
-% Date: 07.06.2019
-% File Version 6.2.0 "Falcon"                                                  %
+% Case description: Unit Cell flow around pin array 3d (fluid)                 %
+% Author: T. Kattmann                                                          %
+% Institution: Robert Bosch GmbH                                               %
+% Date: 07.06.2019                                                             %
+% File Version 7.1.0 "Blackbird"                                               %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
