fix for flamelet energy residual

--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -120,7 +120,6 @@ su2_cfd_src += files(['numerics/CNumerics.cpp',
                       'numerics/template.cpp',
                       'numerics/transition.cpp',
                       'numerics/heat.cpp',
-                      'numerics/scalar.cpp',
                       'numerics/radiation.cpp',
                       'numerics/flow/convection/roe.cpp',
                       'numerics/flow/convection/fds.cpp',
@@ -146,6 +145,9 @@ su2_cfd_src += files(['numerics/CNumerics.cpp',
                       'numerics/turbulent/turb_convection.cpp',
                       'numerics/turbulent/turb_diffusion.cpp',
                       'numerics/turbulent/turb_sources.cpp',
+                      'numerics/flamelet/scalar_convection.cpp',
+                      'numerics/flamelet/scalar_diffusion.cpp',
+                      'numerics/flamelet/scalar_sources.cpp',
                       'numerics/elasticity/CFEAElasticity.cpp',
                       'numerics/elasticity/CFEALinearElasticity.cpp',
                       'numerics/elasticity/CFEANonlinearElasticity.cpp',
